[GTK] REGRESSION: www.yahoo.com redirects to the mobile version after UA change https://bugs.webkit.org/show_bug.cgi?id=125444

Reviewed by Martin Robinson.

* platform/gtk/UserAgentGtk.cpp:
(WebCore::platformVersionForUAString): more correctly pretend we're Mac OS X.
(WebCore::standardUserAgent): ditto.

Canonical link: https://commits.webkit.org/143561@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@160354 268f45cc-cd09-0410-ab3c-d52691b4dbfc